# OpenCL-BoidAlgorithm

./: CMakeLists.txt  README.md  main.cpp
